# ou_diffusion

./: .gitignore  .gitmodules  CMakeLists.txt  Params.h  README.md  main.cpp  read_timepoints.py
libs/gsl/randist/: gsl_randist.h
libs/gsl/rng/: gsl_rng.h
src/: CMakeLists.txt  Params.h  main.cpp  run_sim.py
